``` feat(ai): 新增食谱优化功能并优化菜品识别体验
- 新增AI食谱优化接口，支持根据食材或食谱生成优化建议
- 优化菜品识别结果处理，支持非菜品图片的特殊错误码返回
- 改进识别进度条和结果展示逻辑，提升用户体验

fix(map): 修复高德地图安全配置问题

- 在浏览器环境下正确配置AMAP安全校验参数
- 使用环境变量管理高德地图API密钥配置

fix(merchant): 优化商家头像上传和显示逻辑

- 添加头像变化监听，避免旧错误状态影响新头像显示
- 修复头像URL获取逻辑，确保正确拼接访问地址
- 优化头像更新流程，提供更好的加载反馈

perf(chat): 优化AI聊天界面滚动性能

- 实现滚动节流机制，避免高频更新造成的性能问题
- 添加平滑滚动动画，提升用户体验
- 修复页面激活时的滚动定位问题

refactor(components): 统一组件导入路径规范

- 修正组件引用路径，确保模块导入一致性
- 优化组件生命周期钩子的使用方式
```